--- a/style.css
+++ b/style.css
@@ -9,46 +9,27 @@
 body {
   font-family: "Montserrat", sans-serif;
 }
-
 .heading-containar {
   background-color: black;
   color: white;
-  font-size: 20px;
+  /* font-size: 20px; */
   height: 35px;
-
-  display: flex;
+   display: flex; 
   justify-content: space-around;
   align-items: center;
-}
-
-.navbar {
-  align-items: center;
+} 
+.container {
   display: flex;
   justify-content: center;
-}
-
-.navdiv {
-  display: flex;
-  height: 75px;
-  width: 98%;
+  gap: 5%;
+  padding: 10px;
+  /* gap: 50px; */
+  height: 150px;
   align-items: center;
-  justify-content: space-between;
 }
-
-.logo {
-  color: black;
-  font-size: 30px;
-  font-weight: bold;
-
+a {
+color: black;
 }
-
-/* Links inside the dropdown */
-.dropdown-container {
-  display: flex;
-  gap: 25px;
-
-}
-
 /* dropdown button */
 .dropbtn {
   background-color: white;
@@ -60,7 +41,6 @@ body {
   overflow: hidden;
   text-decoration: none;
 }
-
 /* Add a pseudo-element for the underline effect */
 .dropbtn::after {
   content: '';
@@ -72,12 +52,10 @@ body {
   bottom: 0;
   transition: width 0.3s ease-out;
 }
-
 /* Expand underline from left to right */
 .dropdown:hover .dropbtn::after {
   width: 100%;
 }
-
 /* Dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
@@ -87,7 +65,6 @@ body {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
-
 /* Links inside the dropdown */
 .dropdown-content a {
   color: black;
@@ -96,22 +73,18 @@ body {
   display: block;
   text-align: start;
 }
-
 /* Show the dropdown content on hover */
 .dropdown:hover .dropdown-content {
   display: block;
 }
-
 /* Change color of the dropdown button when hovered */
 .dropdown:hover .dropbtn {
   background-color: white;
 }
-
 /* Change color of links when hovered */
 .dropdown-content a:hover {
   background-color: white;
 }
-
 .dropbtn::after {
   content: '';
   position: absolute;
@@ -122,43 +95,192 @@ body {
   bottom: 0;
   transition: width 0.3s ease-out;
 }
-
-.navigation {
-  display: flex;
-  float: left;
+.class2 {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-
-a {
-  color: black;
-}
-
 .icon {
   font-size: 25px;
+  display: flex;
+  gap: 5px;
 }
 
-.fa-solid,
-.fas {
-  font-weight: bold;
-  gap: 2px;
+.fa-solid,.fas {
+  font-weight: unset;
+  gap: 5px;
 }
-
+b {
+  color: black;
+}
 .slider {
   width: 100%;
   max-width: 100%;
   overflow: hidden;
   position: relative;
 }
-
 .slider-images {
   display: flex;
   width: 200%;
   animation: slide 5s infinite;
 }
-
 .slide {
-  width: 50%;
+  /* width: 50%; */
   transition: opacity 1s ease-in-out;
 }
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+
+  50% {
+    transform: translateX(-50%);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
+}
+p {
+  margin: 3px;
+}
+p b {
+  color: #525050;
+}
+.linep {
+  display: flex;
+  justify-content: center;
+}
+.linep b {
+  color:#525050;
+}
+p.pline {
+  text-decoration: line-through;
+}
+/* ,,,,,,,,,,, */
+ .slider1-container {
+  width: 80%;         
+  display: flex;
+  align-items: center;
+} 
+.boxx1 {
+  display: flex;
+  gap: 10px;
+  width: 100%;
+  overflow: scroll;
+  padding-bottom: 10px;
+}
+  .slider1 {
+  overflow-x: hidden;
+}  
+.slide1-item img {
+  width: 300px;
+  height: auto;
+  border-radius: 8px;
+} 
+.slider1-btn {
+  color: white;
+  border: none;
+  cursor: pointer;
+  z-index: 1;
+  font-size: 24px;
+}
+.container2 {
+display: flex;
+width: 100%;
+height: 600px;
+}
+.video-slide {
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.class-a-1 {
+width: 25%;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.class-a-2 {
+width: 75%;
+}
+
+.img1page .rear-img-1 {
+opacity: 0;
+position: absolute;
+top: 0;
+left: 0;
+z-index: -1;
+
+}
+.img1page {
+background-color: white;
+overflow: hidden;
+transition: box-shadow 0.4s ease-out;
+position: relative;
+
+}
+.img1page:hover .rear-img-1 {
+opacity: 1;
+z-index: 0;
+}
+img.rear-img-1 {
+width: 250px;
+height: 300px;
+
+
+}
+.product-img-1 img {
+width: 250px;
+height: 300px;
+}
+.new1 {
+display: flex;
+gap: 10px;
+}
+
+
+
+
+.slider {
+  /* width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+  position: relative; */
+  display: flex;
+  overflow-x: hidden;
+  scroll-snap-type: x mandatory;
+  /* / scroll-behavior: smooth; / */
+  width: 100%;
+  /* / padding: 10px; / */
+  gap:45px;
+}
+.slider {
+  /* overflow: hidden; */
+  flex: 0 0 16.66%;
+  text-align: center;
+  /* / padding: 10px; / */
+  scroll-snap-align: start;
+}
+
+/* .slider-images {
+  display: flex;
+  width: 200%;
+  animation: slide 5s infinite;
+} */
+.slider-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+/* .slide {
+  width: 50%;
+  transition: opacity 1s ease-in-out;
+  
+} */
 
 @keyframes slide {
   0% {
@@ -174,50 +296,10 @@ a {
   }
 }
 
-.shiny-button {
-  background-color: #000;
-  color: white;
-  height: 35px;
-  width: 100%;
-  font-size: 18px;
-  font-weight: bold;
-  cursor: pointer;
-  border: none;
-}
-
-.shiny-button:hover {
-  background-color: #333;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-}
 
 span.span {
   color: red;
 }
-
-.new {
-  height: 220px;
-  font-size: 12px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: stretch;
-  flex-wrap: wrap;
-  flex-direction: column;
-}
-
-
-.new h2 {
-  font-size: 35px;
-}
-
-.new p {
-  font-size: 20px;
-}
-
-.new .shiny-button {
-  width: 13%;
-}
-
 .product {
   background-color: white;
   overflow: hidden;
@@ -234,12 +316,10 @@ span.span {
   left: 0;
   z-index: -1;
 }
-
 .product:hover .rear-img {
   opacity: 1;
   z-index: 0;
 }
-
 img {
   object-fit: cover;
   width: 100%;
@@ -249,91 +329,77 @@ img {
   display: flex;
   flex-direction: row;
 }
-
 button.but {
   color: white;
   background-color: black;
   width: 100%;
 }
-
 figure {
   text-align: center;
   margin: 0;
 }
-
-figcaption {
-  color: black;
-  margin: 6px;
+.figca {
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  font-size: 15px;
 }
-
+.figca1 {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
 .heading4 {
   display: flex;
   justify-content: center;
-  height: 220px;
+  height: 175px;
   align-items: center;
   font-size: 15px;
 }
-
-
-
 span.red {
   color: red;
   font-weight: 600;
 }
-
 .dropdown {
   text-align: center;
-
 }
-
 .video {
   display: flex;
   flex-direction: row;
   overflow: auto;
   gap: 20px;
   justify-content: center;
+  padding-bottom: 10px;
 }
-
 .option {
   padding: 20px;
 }
-
 .heading5 {
   text-align: center;
   font-size: 25px;
   margin: 20px;
   height: 50px;
 }
-
 .point {
   text-align: center;
   padding: 10px 10px;
 }
-
 .\32 age {
   display: flex;
   flex-direction: row;
 }
-
 .box1 img {
   width: 300px;
 }
-
 .\33 age {
   display: flex;
   flex-direction: row;
 }
-
 .box1 {
   padding: 2px;
 }
-
 .line {
   text-decoration: line-through;
 }
-
 .heading6 {
   display: flex;
   align-items: center;
@@ -344,140 +410,92 @@ span.red {
   height: 120px;
   text-decoration: underline;
 }
-
-
 .img-center {
   width: 50%;
   display: flex;
   padding: 10px 10px;
 }
-
 .img-center img {
   height: 620px;
 
 }
-
 .center-img {
   display: flex;
 }
-
 .sct2image {
   display: flex;
   width: 98%;
   padding: 10px 10px;
 }
-
 .\32 img {
   width: 50%;
 }
-
 .product-img img {
   height: 351px;
 }
-
 .\32 img .shiny-button {
   width: 150px;
 }
-
 .gab figcaption {
   font-size: 22px;
   font-weight: bold;
 }
-
-
 .containwe3 {
   display: flex;
-  width: 100%;
+  width: 99%;
   gap: 10px;
   justify-content: center;
 }
-
 .child1 {
   width: 250px;
-
 }
-
 .group-img1 {
   width: 250px;
 }
-
 .child4 {
   width: 250px;
-
 }
-
-
-
 .group-img img {
   height: 250px;
 }
-
 .group-img img {
   width: 250px;
   height: 250px;
   object-fit: fill;
 }
-
 .group-img img {
   height: 250px;
   object-fit: fill;
 }
-
 .big-group-img {
   height: 500px;
   object-fit: cover;
 }
-
 .big-group-img img {
   height: 505px;
   width: 430px;
 }
-
 .right-group-img {
   width: 250px;
   height: 250px;
 }
-
 .right-group-img img {
   width: 250px;
   height: 250px;
-
 }
-
-
-
 h6 {
   font-size: 30px;
-
 }
-
 .group-img1 {
   width: 250px;
 }
-
 .group-img2 {
   width: 250px;
 }
-
 .group-img img {
   height: 250px;
   object-fit: fill;
 }
-
-.btnn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  height: 75px;
-}
-
-.btnn .shiny-button {
-  width: 20%;
-}
-
-
-
 .img-last {
   display: flex;
   gap: 15px;
@@ -485,84 +503,52 @@ h6 {
   height: 400px;
   align-items: center;
 }
-
 .img-last img {
   width: 175px;
 }
-
 .box22 {
   display: flex;
-  height: 130px;
+  height: 150px;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
-
 .heading9 {
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
-
 .footer {
   display: flex;
-
   justify-content: space-evenly;
-
   font-size: 20px;
   line-height: 60px;
   text-align: left;
   height: 280px;
-
 }
-
 .social-link a {
   font-size: 25px;
-
 }
-
-
 li {
   list-style: none;
   line-height: 25px;
+  font-size: 14px;
 }
-
 .last-line-1 {
   text-align: center;
 }
-
 .footer1 {
-
+  margin: 50px;
   display: flex;
   flex-direction: column;
 }
-
-
-.btn1 {
-  position: relative;
-  border: none;
-  transition: all 0.5s;
-  z-index: 1;
-  cursor: pointer;
-  border-radius: 3px;
-  background-color: black;
+button.shiny-button {
+  background: black;
   color: white;
-  top: 50px;
+  padding: 10px;
+  letter-spacing: 4px;
+  width: 100%;
 }
-
-.btn1::before,
-.btn1::after {
-  content: "";
-  position: absolute;
-  z-index: -1;
-}
-
-.btn1:hover {
-  background: gray;
-  color: black;
-  box-shadow: 0 0 5px #0000003b, 0 0 25px #0000003b, 0 0 50px #0000003b;
-}
-
 form {
   padding-bottom: 5px;
   display: flex;
@@ -570,12 +556,10 @@ form {
   justify-content: space-between;
   border-bottom: 1px solid #060606;
 }
-
 form .far {
   font-size: 15px;
   margin-right: 10px;
 }
-
 form input {
   width: 100%;
   background: transparent;
@@ -583,99 +567,49 @@ form input {
   border: 0;
   outline: none;
 }
-
 form button {
   background: transparent;
   border: 0;
   outline: none;
   cursor: pointer;
 }
-
 .email.b0x {
   padding: 10px 10px 0px 0px;
 }
-
 form button .fas {
   color: black;
   font-size: 18px;
 }
-
-
-
 h4 {
-
   text-decoration: underline;
   font-size: 25px;
 }
-
 .dropbtn {
   height: 35px;
+  color: dimgray;
 }
-
-.heading9 p {
-  font-size: 25px;
-}
-
 .last-line-1 h6 {
-  font-size: 25px;
+  font-size: 20px;
+  color: dimgrey;
 }
-
-
-
 .\31 child img {
   height: 300px;
   width: 250px;
 }
-
 .\31 child {
   width: 500px;
   height: 600px;
   display: flex;
-
-
-  /* .image-container {
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 20px;
 }
-
-.image-container img {
-    width: 200px;
-    height: 200px;
-    transition: transform 0.3s ease-in-out;
-}
-
-.hover-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    /* Adjust opacity as needed  */
-  color: #fff;
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-
-
 .image-container {
   position: relative;
   overflow: hidden;
-
 }
-
 .image-container img {
   width: 455px;
   height: 503px;
   transition: transform 0.3s ease-in-out;
 }
-
 .hover-content {
   position: absolute;
   top: 0;
@@ -683,144 +617,109 @@ h4 {
   width: 464px;
   height: 520px;
   background-color: rgba(0, 0, 0, 0.7);
-
   color: #fff;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   display: flex;
-
 }
-
 video {
-  border-radius: 160px;
+  border-radius: 30px;
 }
-
 .image-container:hover img {
   transform: scale(1.1);
 }
-
 .image-container:hover .hover-content {
   opacity: 1;
 }
-
-
 .full-img img {
-  width: 100%;
+  width: 90%;
+  object-fit: contain;
 }
-
+.full-img {
+  height: 275px;
+  display: flex;
+  justify-content: center;
+}
 .fig button {
   width: 30%;
 }
-
 .heading8 {
   display: flex;
   align-items: center;
-
   gap: 10px;
-  height: 150px;
+  height: 125px;
   font-weight: 600;
   justify-content: center;
   font-size: 30px;
 }
-
 .heading8::before,
 .heading8::after {
   content: '';
   flex: 0 1 50px;
   border-bottom: 2px solid black;
 }
-
 .heading8::before {
   content: '';
 }
-
 .heading8::after {
   content: '';
 }
-
 .fig figcaption {
   font-size: 20px;
   font-weight: 600;
 }
-
 .fig button {
   width: 20%;
   letter-spacing: 2px;
   font-size: 15px;
   font-weight: normal;
 }
-
-.full-img {
-  height: 275px;
-  align-items: flex-end;
-  display: flex;
-}
-
 .heading88 {
   height: 150px;
   justify-content: center;
   display: flex;
   flex-direction: column;
   gap: 5px;
+  text-align: center;
 }
-
+.fig {
+  text-align: center;
+}
 .para1 figcaption {
   font-size: 15px;
 }
-
 p.pg {
   font-weight: 600;
   font-size: 17px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* .fa-solid, .fas {
+  font-weight: 900;
+  color: dimgrey;
+} */
 /* pagination */
 .pagination-container {
   width: 100%;
-
   /* Larger width for e-commerce display */
   text-align: center;
 }
-
-
-
 .pagination-controls label {
   padding: 8px 13px;
   background-color: white;
   border: 1px solid black;
-
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.3s ease;
   font-size: 20px;
 }
-
 .pagination-controls label:hover {
   background-color: #e8e8e8;
 }
-
 input[type="radio"] {
   display: none;
 }
-
 .page-content {
   display: none;
 }
-
 /* Show content when a radio button is selected */
 #page1:checked~.content #content1,
 #page2:checked~.content #content2,
@@ -829,7 +728,6 @@ input[type="radio"] {
 #page5:checked~.content #content5 {
   display: block;
 }
-
 /* Highlight the selected page number */
 #page1:checked~.pagination-controls label[for="page1"],
 #page2:checked~.pagination-controls label[for="page2"],
@@ -839,25 +737,19 @@ input[type="radio"] {
   background-color: black;
   color: white;
 }
-
-
 .page {
   display: flex;
   gap: 15px;
   justify-content: center;
   align-items: center;
-  height: 85px;
-
+  height: 100px;
 }
-
 .image-3 {
   display: flex;
   flex-wrap: wrap;
-
   gap: 20px;
   justify-content: space-around;
 }
-
 .top {
   background-color: #f9f9f9;
   border-radius: 10px;
@@ -865,108 +757,118 @@ input[type="radio"] {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
-
 .top img {
   max-width: 100%;
   height: auto;
   border-radius: 8px;
   margin-bottom: 10px;
 }
-
 .top figcaption {
   font-size: 16px;
   color: #333;
   margin-bottom: 5px;
 }
-
 .top figcaption span {
   color: red;
   font-weight: bold;
 }
-
 /* Make pagination more responsive */
 @media (max-width: 600px) {
   .pagination-controls label {
     padding: 8px 15px;
     font-size: 14px;
   }
-
   .page-content {
     padding: 15px;
   }
 }
-
 .line1 {
   display: flex;
   gap: 25px;
 }
-
 .good1 {
   display: flex;
   gap: 25px;
-
 }
-
 .product-img img {
   height: 350px;
   width: 250px;
 }
-
 .product-img-1 img {
   height: 350px;
-
 }
-
 .img1page .rear-img-1 {
   opacity: 0;
   position: absolute;
-
   top: 0;
   left: 0;
   z-index: -1;
-
 }
-
 .img1page {
   background-color: white;
   overflow: hidden;
   transition: box-shadow 0.4s ease-out;
   position: relative;
-
-  width: 25%;
 }
-
 .img1page:hover .rear-img-1 {
   opacity: 1;
   z-index: 0;
 }
-
-img.rear-img-1 {
-  width: 300px;
-
-}
-
-
-
 .line11 {
   display: flex;
   gap: 10px;
 }
-
 .end {
   text-align: right;
+  width: 100%;
 }
-
 .big-image {
-
   display: flex;
-
+  gap: 1%;
   justify-content: space-evenly;
 }
-
+.big-img {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
 .big-image img {
-
   width: 612px;
-  height: 500px;
-
+  height: 600px;
+}
+.btnn {
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+button.btnnn {
+  background: black;
+  border: none;
+  color: white;
+  letter-spacing: 5px;
+  width: 200px;
+  height: 40px;
+}
+.social-link {
+  display: flex;
+  gap: 15px;
+}
+h3 {
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: dimgray;
+}
+.child-li-1 li {
+  margin: 5px 0px;
+}
+.child-li-2 li {
+  margin: 5px 0px;
+}
+.child-li-3 li {
+  margin: 5px 0px;
+}
+.heading9 h3 {
+  color: black;
 }
